# ComputaCo

./: README  pyproject.toml
.computacode/: conversation.md
computaco/abstractions/: abilities.py  conversation.py  converts.py  environment.py  project.py  types.py
computaco/agents/: agent.py  conversation_agent.py  group.py  langchain_agent.py
computaco/organizations/: company.py  enterprise.py  organization.py  team.py
computaco/processes/: process.py
computaco/processes/communication/: brainstorm.py  casual_conversation.py  consensus_building.py  constructive_criticism.py  debate.py  idea_rating_and_improvement.py  meeting.py  negotiation.py  peer_review.py  presentation.py  question_and_answer_session.py  role_playing.py  topic_exploration.py
computaco/processes/engineering/: agile.py  engineering.py  se.py  waterfall.py
computaco/tools/: READ THIS IDEA NOW  browser.py  buffered_tool.py  composite_tool.py  conversation.py  gui.py  ide.py  langchain_tool.py  multitasking_tool.py  python_function_toolbox.py  terminal.py  text_editor.py  tool.py
computaco/utils/: abilities.py  consts.py  english.py  logging.py  python.py  registry.py  scoped.py  storage.py
computaco/utils/parselpp/: signature.py
examples/: tensaco_inc.py
old/: dump.txt  goal_oriented_conversation.py  idea_rating_and_improvement.py  manage.py  meeting.py  negotiation.py  peer_review.py  presentation.py  question_and_answer_session.py  rapid_problem_solving.py  round_robin_discussion.py  storytelling.py  topic_exploration.py
old/environments/: conversation.py  system_interface.py
